--- a/conf/prometheus.yml
+++ b/conf/prometheus.yml
@@ -10,6 +10,9 @@ scrape_configs:
 
   - job_name: 'dockerswarm-sd'
 
+    # stop Prom for mangling the labels by adding "exported_" prefix
+    honor_labels: true
+
     file_sd_configs:
     - files:
       - '/etc/prometheus/targets-from-swarm.json'
