--- a/turbobob.json
+++ b/turbobob.json
@@ -5,7 +5,7 @@
 	"builders": [
 		{
 			"name": "default",
-			"uses": "docker://fn61/buildkit-golang:20200612_1221_eca6dcb6",
+			"uses": "docker://fn61/buildkit-golang:20210208_0951_8496e47f",
 			"mount_destination": "/workspace",
 			"workdir": "/workspace",
 			"commands": {
