--- a/turbobob.json
+++ b/turbobob.json
@@ -5,7 +5,7 @@
 	"builders": [
 		{
 			"name": "default",
-			"uses": "docker://fn61/buildkit-golang:20210208_0951_8496e47f",
+			"uses": "docker://fn61/buildkit-golang:20210702_0854_7adda4a2",
 			"mount_destination": "/workspace",
 			"workdir": "/workspace",
 			"commands": {
